Fix Bug #32105 - Copyright/trademark/terms of use not showing in Simple skin
Don't really know why this was hidden, anyway.

--- a/skins/simple/main.css
+++ b/skins/simple/main.css
@@ -84,10 +84,6 @@ a:hover {
 	left: 0;
 }
 
-#footer {
-	display: none;
-}
-
 body {
 	margin: 0;
 	padding: 0;
